<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Perfil">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login"
        android:scaleType="centerCrop"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/actionperfildepo"
                android:typeface="serif"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/foto"
                android:layout_width="180dip"
                android:layout_height="180dip"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/img_base" />

            <TextView
                android:id="@+id/cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#85AAAAAA"
                android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
                android:hint="@string/actionCedula"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#85AAAAAA"
                android:drawableLeft="@android:drawable/ic_menu_sort_alphabetically"
                android:hint="@string/actionNombre"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_sort_alphabetically"
                android:background="#85AAAAAA"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionApellido" />

            <TextView
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                android:background="#85AAAAAA"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionFechaNa" />

            <TextView
                android:id="@+id/tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
                android:background="#85AAAAAA"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionTipo" />

            <TextView
                android:id="@+id/grado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_info_details"
                android:background="#85AAAAAA"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionGrado" />

            <TextView
                android:id="@+id/categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_info_details"
                android:background="#85AAAAAA"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionCategoria" />

            <TextView
                android:id="@+id/sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_edit"
                android:background="#85AAAAAA"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionSexo" />

            <TextView
                android:id="@+id/peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_info_details"
                android:background="#85AAAAAA"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionPeso" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>