<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".VelocidadTraslacion">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:text="@string/actionGVT"
                android:textSize="20sp" />
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/actionFechaTest"/>

            <Spinner android:id="@+id/spfecha"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text=""
                android:textSize="12sp"
                android:lineSpacingExtra="6sp"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart5"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text=""
                android:textSize="12sp"
                android:lineSpacingExtra="6sp"/>

            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/actionEstadisticos"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/pique30m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
                android:hint="@string/actionPique30"
                android:layout_marginTop="20dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="sans" />
            <TextView
                android:id="@+id/pique50m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionPique50" />

            <TextView
                android:id="@+id/pique100m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionPique100" />
            <TextView
                android:id="@+id/totalVT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionGeneral" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>