<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Estadisticas">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/entre"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/actionestadisticas"
        android:typeface="serif"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ButtonRF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_fondo_color"
        android:elevation="5dp"
        android:onClick="restFueza"
        android:text="@string/actionRF"
        android:textColor="#fff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonFE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_fondo_color"
        android:elevation="5dp"
        android:onClick="furzaExpl"
        android:text="@string/actionFE"
        android:textColor="#fff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonFM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_fondo_color"
        android:elevation="5dp"
        android:onClick="fuezaMax"
        android:text="@string/actionFM"
        android:textColor="#fff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonRRE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_fondo_color"
        android:elevation="5dp"
        android:onClick="restRap"
        android:text="@string/actionRR"
        android:textColor="#fff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonVT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_fondo_color"
        android:elevation="5dp"
        android:onClick="velocidadTras"
        android:text="@string/actionVT"
        android:textColor="#fff"
        android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>