<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Entrenamiento">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/entre"
        android:scaleType="centerCrop"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/actionRF"
                android:typeface="serif"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actionT70"
                android:background="#BDBDBD"
                android:typeface="serif"
                android:textSize="15sp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/barras70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFF9C4"
                android:hint="@string/actionBarras"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/paralelas70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF9C4"
                android:hint="@string/actionParalelas"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/cabos70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF9C4"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionCabos" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actionT80"
                android:background="#BDBDBD"
                android:layout_marginTop="20dp"
                android:typeface="serif"
                android:textSize="15sp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/barras80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFEE58"
                android:hint="@string/actionBarras"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/paralelas80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFEE58"
                android:hint="@string/actionParalelas"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/cabos80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFEE58"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionCabos" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actionT90"
                android:background="#BDBDBD"
                android:layout_marginTop="20dp"
                android:typeface="serif"
                android:textSize="15sp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/barras90"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FBC02D"
                android:hint="@string/actionBarras"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/paralelas90"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FBC02D"
                android:hint="@string/actionParalelas"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/cabos90"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FBC02D"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionCabos" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
