<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FuerzaMaxima">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/entre"
        android:scaleType="centerCrop"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/actionFM"
                android:typeface="serif"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actionT70"
                android:background="#BDBDBD"
                android:layout_marginTop="20dp"
                android:typeface="serif"
                android:textSize="15sp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prom70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#EF9A9A"
                android:hint="@string/actionProm"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/halon70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EF9A9A"
                android:hint="@string/actionHalon"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/sentadilla70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EF9A9A"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionSentadilla" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actionT80"
                android:background="#BDBDBD"
                android:layout_marginTop="20dp"
                android:typeface="serif"
                android:textSize="15sp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/prom80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#EF5350"
                android:hint="@string/actionProm"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/halon80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EF5350"
                android:hint="@string/actionHalon"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/sentadilla80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EF5350"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionSentadilla" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actionT90"
                android:background="#BDBDBD"
                android:layout_marginTop="20dp"
                android:typeface="serif"
                android:textSize="15sp"
                android:textColor="#000000"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/prom90"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#D32F2F"
                android:hint="@string/actionProm"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/halon90"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D32F2F"
                android:hint="@string/actionHalon"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/sentadilla90"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D32F2F"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:hint="@string/actionSentadilla" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
